# pane-app

./: .dockerignore  .editorconfig  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/scripts/: merge-tauri-manifests.py
.github/workflows/: ci.yml  helper-apk.yml  release.yml
apps/docs/: astro.config.mjs  package.json
apps/docs/src/components/: ThemeToggle.astro
apps/docs/src/content/: config.ts
apps/docs/src/content/docs/: filtering.md  getting-started.md  index.mdx  rules.md
apps/docs/src/content/docs/en/: getting-started.md  index.mdx  rules.md
apps/docs/src/content/docs/reference/: releases.md
apps/docs/src/styles/: pane.css
apps/web/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
apps/web/deploy/: Caddyfile.snippet  com.pane.tunnel.plist.tmpl
apps/web/src/: main.rs  ratelimit.rs
apps/web/src/routes/: crash.rs  download.rs  landing.rs  mod.rs  update.rs
apps/web/static/: install-macos.sh  landing.en.html  landing.html  pane-gpg.pub
assets/: pinned-hints.json
crates/mycharles-android/: Cargo.toml
crates/mycharles-android/src/: lib.rs
crates/mycharles-ca/: Cargo.toml
crates/mycharles-ca/src/: lib.rs
crates/mycharles-devices/: Cargo.toml
crates/mycharles-devices/src/: lib.rs
crates/mycharles-engine/: Cargo.toml
crates/mycharles-engine-mitm/: Cargo.toml
crates/mycharles-engine-mitm/src/: leaf.rs  lib.rs  proxy_loop.rs
crates/mycharles-engine/src/: lib.rs
crates/mycharles-ios/: Cargo.toml
crates/mycharles-ios/src/: lib.rs
crates/mycharles-ipc/: Cargo.toml
crates/mycharles-ipc/src/: lib.rs
crates/mycharles-mobileconfig/: Cargo.toml
crates/mycharles-mobileconfig/src/: lib.rs
crates/mycharles-pinning/: Cargo.toml
crates/mycharles-pinning/src/: lib.rs
crates/mycharles-setup-server/: Cargo.toml
crates/mycharles-setup-server/src/: lib.rs
crates/mycharles-storage/: Cargo.toml
crates/mycharles-storage/migrations/: V001__init.sql
crates/mycharles-storage/src/: bodies.rs  filter_dsl.rs  lib.rs  migrations.rs  replay_impl.rs
crates/mycharles-storage/tests/: integration.rs
crates/pane-android/: Cargo.toml
crates/pane-android/src/: lib.rs  logcat.rs
crates/pane-ca/: Cargo.toml
crates/pane-ca/src/: lib.rs
crates/pane-devices/: Cargo.toml
crates/pane-devices/src/: lib.rs
crates/pane-engine/: Cargo.toml
crates/pane-engine-mitm/: Cargo.toml
crates/pane-engine-mitm/examples/: mitm_smoke.rs  pac_smoke.rs
crates/pane-engine-mitm/src/: heartbeat.rs  leaf.rs  lib.rs  pac.rs  patch.rs  proxy_loop.rs  rules.rs
crates/pane-engine-mitm/tests/: e2e_http_body.rs  e2e_tls.rs
crates/pane-engine/src/: lib.rs
crates/pane-ios/: Cargo.toml
crates/pane-ios/src/: lib.rs
crates/pane-ipc/: Cargo.toml
crates/pane-ipc/src/: lib.rs
crates/pane-mobileconfig/: Cargo.toml
crates/pane-mobileconfig/src/: lib.rs
crates/pane-pinning/: Cargo.toml
crates/pane-setup-server/: Cargo.toml
crates/pane-setup-server/src/: lib.rs
crates/pane-storage/: Cargo.toml
crates/pane-storage/migrations/: V002__rules.sql  V003__rule_collections.sql  V004__rule_patches.sql  V005__saved_filter_kind.sql
crates/pane-storage/src/: bodies.rs  filter_dsl.rs  lib.rs  replay_impl.rs
crates/pane-storage/tests/: integration.rs
docs/: android-setup-matrix.md  idea.md  ios-setup-strategy.md  ipc-contract.md  release-process.md  rules.md  sidecars.md
docs/tasks/prd_01_mvp-network-debugger/: prd_01_mvp-network-debugger.md  prd_01_rep_01_mvp-network-debugger.md  prd_01_rep_02_implementation.md  prd_01_scratch.md  prd_01_task_01_project-bootstrap.md  prd_01_task_02_proxy-engine-ca.md  prd_01_task_03_storage-layer.md  prd_01_task_04_ipc-contracts.md  prd_01_task_05_capture-list-ui.md  prd_01_task_06_detail-panes.md  prd_01_task_07_replay.md  prd_01_task_08_device-manager-core.md  prd_01_task_09_ios-usb-setup.md  prd_01_task_10_android-usb-setup.md  prd_01_task_11_qr-fallback.md  prd_01_task_12_pinning-detection.md  prd_01_task_13_packaging.md  prd_01_task_14_docs-onboarding.md
scripts/: dev.sh  fetch-sidecars.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: pane-helper.apk
src-tauri/capabilities/: default.json  logcat.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ca.rs  captures.rs  devices.rs  filters.rs  logcat.rs  mod.rs  proxy.rs  replay.rs  rules.rs
src/components/: BodyViewer.tsx  DetailPanes.tsx  HelpButton.tsx  HorizontalResizer.tsx  Layout.tsx  VerticalResizer.tsx
src/i18n/: en.ts  index.ts  ru.ts
src/ipc/: client.ts  events.ts  types.ts
src/lib/: logcat-filter.ts  updater.ts
src/stores/: captures.ts  font-scale.ts  rules-ui.ts  saved-filters.ts  theme.ts
src/styles/: index.css
src/views/: AboutView.tsx  CapturesView.tsx  DevicesView.tsx  LogcatView.tsx  ReplayView.tsx  RulesView.tsx  SettingsView.tsx
tools/pane-helper-android/: build.gradle.kts  gradle.properties  settings.gradle.kts
tools/pane-helper-android/app/: build.gradle.kts
tools/pane-helper-android/app/src/main/: AndroidManifest.xml
tools/pane-helper-android/app/src/main/kotlin/tech/thothlab/pane/helper/: HeartbeatService.kt  InstallCaActivity.kt  LauncherActivity.kt
tools/pane-helper-android/app/src/main/res/values/: strings.xml
