[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/pane-ipc",
    "crates/pane-ca",
    "crates/pane-engine",
    "crates/pane-engine-mitm",
    "crates/pane-storage",
    "crates/pane-devices",
    "crates/pane-ios",
    "crates/pane-android",
    "crates/pane-mobileconfig",
    "crates/pane-setup-server",
    "crates/pane-pinning",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/thothlab/pane-app"
authors = ["Pane contributors"]

[workspace.dependencies]
# Core async + util
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs / time
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# HTTP / TLS
bytes = "1"
http = "1"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
hyper = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Secrets
keyring = "2"
directories = "5"

# Misc
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
qrcode = "0.14"
nom = "7"
broadcast = "0.1"

# Internal crates
pane-ipc = { path = "crates/pane-ipc" }
pane-ca = { path = "crates/pane-ca" }
pane-engine = { path = "crates/pane-engine" }
pane-engine-mitm = { path = "crates/pane-engine-mitm" }
pane-storage = { path = "crates/pane-storage" }
pane-devices = { path = "crates/pane-devices" }
pane-ios = { path = "crates/pane-ios" }
pane-android = { path = "crates/pane-android" }
pane-mobileconfig = { path = "crates/pane-mobileconfig" }
pane-setup-server = { path = "crates/pane-setup-server" }
pane-pinning = { path = "crates/pane-pinning" }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
