[package]
name = "my-charles"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network debugger with one-command device setup"

[lib]
name = "mycharles_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
parking_lot.workspace = true

mycharles-ipc.workspace = true
mycharles-engine.workspace = true
mycharles-engine-mitm.workspace = true
mycharles-ca.workspace = true
mycharles-storage.workspace = true
mycharles-devices.workspace = true
mycharles-setup-server.workspace = true
mycharles-pinning.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
