[package]
name = "pane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network debugger with one-command device setup"

[lib]
name = "pane_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
uuid.workspace = true
time.workspace = true
directories.workspace = true
parking_lot.workspace = true
base64.workspace = true

pane-ipc.workspace = true
pane-engine.workspace = true
pane-engine-mitm.workspace = true
pane-ca.workspace = true
pane-storage.workspace = true
pane-devices.workspace = true
pane-android.workspace = true
pane-setup-server.workspace = true
pane-pinning.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
