[package]
name = "pane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network debugger with one-command device setup"

[lib]
name = "pane_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
uuid.workspace = true
time.workspace = true
directories.workspace = true
parking_lot.workspace = true
base64.workspace = true

pane-ipc.workspace = true
pane-engine.workspace = true
pane-engine-mitm.workspace = true
pane-ca.workspace = true
pane-storage.workspace = true
pane-devices.workspace = true
pane-android.workspace = true
pane-setup-server.workspace = true
pane-pinning.workspace = true

# Pin a transitive dep we don't use directly. brotli 8.0.3 (pulled by
# tauri-codegen for asset compression) is broken with alloc-stdlib
# 0.2.3 (released 2026-06-14 — `StandardAlloc` no longer satisfies
# `Allocator<ZopfliNode>` etc., E0277). CI re-resolves semver-compat
# versions and silently picked up 0.2.3, so every platform build
# started failing. Locking to 0.2.2 here forces the resolver to keep
# the working version regardless of cache state. Drop this when
# brotli/alloc-stdlib publish a compatible pair.
alloc-stdlib = "=0.2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
