[package]
name = "mycharles-android"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "macros"] }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
mycharles-ipc.workspace = true
mycharles-ca.workspace = true
