[package]
name = "mycharles-ca"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Root CA generation, persistence, leaf-on-the-fly"

[dependencies]
rcgen.workspace = true
keyring.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
qrcode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
tracing.workspace = true
parking_lot.workspace = true
mycharles-ipc.workspace = true
mycharles-storage.workspace = true
mycharles-mobileconfig.workspace = true
directories.workspace = true
