[package]
name = "mycharles-devices"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "sync", "rt"] }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
parking_lot.workspace = true
mycharles-ipc.workspace = true
mycharles-ca.workspace = true
mycharles-storage.workspace = true
mycharles-ios.workspace = true
mycharles-android.workspace = true
