[package]
name = "mycharles-ios"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "macros"] }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
mycharles-ipc.workspace = true
mycharles-ca.workspace = true
mycharles-mobileconfig.workspace = true
