[package]
name = "mycharles-setup-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local HTTP setup server for QR-based device pairing"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros"] }
hyper.workspace = true
http.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
qrcode.workspace = true
base64.workspace = true
mycharles-mobileconfig.workspace = true
