[package]
name = "mycharles-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed capture/device/CA storage + body blobs"

[dependencies]
rusqlite.workspace = true
refinery.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
nom.workspace = true
reqwest.workspace = true
mycharles-ipc.workspace = true

[dev-dependencies]
tempfile = "3"
