[package]
name = "pane-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC DTOs shared between Tauri commands and frontend"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
